--- a/app/src/main/res/layout/fragment_hab1.xml
+++ b/app/src/main/res/layout/fragment_hab1.xml
@@ -35,6 +35,7 @@
 
         <View
             android:elevation="20dp"
+            android:id="@+id/color_picker1"
             android:layout_width="30dp"
             android:layout_height="20dp"
             android:background="#000"/>
