--- a/app/src/main/res/layout/fragment_frente.xml
+++ b/app/src/main/res/layout/fragment_frente.xml
@@ -1,13 +1,24 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.fiuady.hadp.homecontrol.FrenteFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <Switch
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:id="@+id/luz_frente_sw"
+        android:text="Encender/Apagar luces"
+        android:layout_centerHorizontal="true"
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp" />
+    <Switch
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/frente_sw"
+        android:layout_below="@id/luz_frente_sw"
+        android:text="Abrir/Cerrar Puerta Principal"
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp" />
 
-</FrameLayout>
+</RelativeLayout>
