--- a/app/src/main/res/layout/fragment_hab1.xml
+++ b/app/src/main/res/layout/fragment_hab1.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Luces: "
+        android:text="@string/luces_tag"
         android:padding="10dp"
         android:id="@+id/luces_hab1_text"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
@@ -15,23 +15,22 @@
     <Switch
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/luces_hab1_text"
+        android:layout_below="@id/luces_hab1_text"
         android:id="@+id/luz_hab1_switch"
-        android:text="Encender/Apagar Luz"
+        android:text="@string/on_off_luces"
         android:textAlignment="center"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/luz_hab1_switch"
+        android:layout_below="@id/luz_hab1_switch"
         android:id="@+id/color_select1"
         android:layout_centerHorizontal="true">
 
         <TextView
-            android:enabled="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Color: "/>
+            android:text="@string/color_tag"/>
 
         <View
             android:elevation="20dp"
@@ -45,9 +44,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Estado de la ventana: "
+        android:text="@string/status_vent_tag"
         android:padding="10dp"
-        android:layout_below="@+id/color_select1"
+        android:layout_below="@id/color_select1"
         android:id="@+id/Ventana_hab1_text"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
 
@@ -56,14 +55,14 @@
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/Ventana_hab1_text"
+        android:layout_below="@id/Ventana_hab1_text"
         android:id="@+id/ventana1_switch"
         tools:text="Abierta "/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ventilador: "
+        android:text="@string/fan_tag"
         android:padding="10dp"
         android:layout_below="@+id/ventana1_switch"
         android:id="@+id/Ventilador_hab1_text"
@@ -74,7 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/Ventilador_hab1_text"
         android:id="@+id/ventilador_hab1_switch"
-        android:text="Encender/Apagar Ventilador"
+        android:text="@string/on_off_fan"
         android:textAlignment="center"/>
 
     <Switch
@@ -82,14 +81,14 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/ventilador_hab1_switch"
         android:id="@+id/ventilador_hab1_control"
-        android:text="Control automático"
+        android:text="@string/control_auto_tag"
         android:textAlignment="center"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/ventilador_hab1_control"
+        android:layout_below="@id/ventilador_hab1_control"
         android:id="@+id/temperatura_control1">
 
         <TextView
@@ -97,8 +96,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:textAlignment="center"
-            android:text="Temperatura
-máxima: "/>
+            android:text="@string/max_temp"/>
 
         <NumberPicker
             android:layout_width="wrap_content"
@@ -112,8 +110,7 @@ máxima: "/>
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:textAlignment="center"
-            android:text="Temperatura
-mínima: "/>
+            android:text="@string/min_temp"/>
 
         <NumberPicker
             android:layout_width="wrap_content"
@@ -124,12 +121,12 @@ mínima: "/>
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/temperatura_control1">
+        android:layout_below="@id/temperatura_control1">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Temperatura actual: "/>
+            android:text="@string/actual_temp"/>
 
         <TextView
             android:layout_width="wrap_content"
