--- a/app/src/main/res/layout/fragment_sala.xml
+++ b/app/src/main/res/layout/fragment_sala.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,7 +7,49 @@
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:text="@string/puerta_tag"
+        android:id="@+id/puerta_sala_tag"
+        android:padding="10dp"/>
 
-</FrameLayout>
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/sala_frente_sw"
+        android:layout_below="@id/puerta_sala_tag"
+        android:layout_centerHorizontal="true"
+        android:text="@string/puerta_princ_op_cl"
+         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/status_vent_tag"
+        android:padding="10dp"
+        android:layout_below="@id/sala_frente_sw"
+        android:id="@+id/Ventana_sala"
+     />
+
+    <Switch
+        android:enabled="false"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Ventana_sala"
+        android:id="@+id/ventana_sala_switch"
+        tools:text="Abierta "/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/sensor_mov_tag"
+        android:text="@string/sensor_mov"
+        android:layout_below="@id/ventana_sala_switch"
+        android:padding="10dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/sensor_mov_text"
+        android:layout_below="@id/sensor_mov_tag"
+        android:layout_centerHorizontal="true"
+        tools:text="...Activado..."/>
+
+</RelativeLayout>
