--- a/app/src/main/res/layout/fragment_hab2.xml
+++ b/app/src/main/res/layout/fragment_hab2.xml
@@ -34,6 +34,7 @@
 
         <View
             android:elevation="20dp"
+            android:id="@+id/color_picker2"
             android:layout_width="30dp"
             android:layout_height="20dp"
             android:background="#000"/>
