--- a/app/src/main/res/layout/fragment_frente.xml
+++ b/app/src/main/res/layout/fragment_frente.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -77,4 +78,12 @@
         android:layout_below="@id/sens_tag"
         android:layout_toEndOf="@id/int_tag"/>
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/luz_amb_chk"
+        android:text="@string/sensor_amb"
+        android:layout_below="@id/int_tag"
+        android:layout_centerHorizontal="true"
+        />
 </RelativeLayout>
