--- a/app/src/main/res/layout/fragment_hab1.xml
+++ b/app/src/main/res/layout/fragment_hab1.xml
@@ -101,6 +101,7 @@
         <NumberPicker
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/minhab1"
             >
 
         </NumberPicker>
@@ -114,7 +115,8 @@
 
         <NumberPicker
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/maxhab1"/>
     </LinearLayout>
 
     <LinearLayout
