--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -16,11 +16,12 @@
         android:layout_height="wrap_content" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/section_icon"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:layout_marginEnd="16dp"
-        android:layout_centerVertical="true"/>
+        android:scaleType="fitCenter" />
 
 </RelativeLayout>
