--- a/app/src/main/res/layout/fragment_hab1.xml
+++ b/app/src/main/res/layout/fragment_hab1.xml
@@ -133,6 +133,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/temp_hab1"
             tools:text="50°C"/>
 
     </LinearLayout>
