--- a/app/src/main/res/layout/fragment_patio.xml
+++ b/app/src/main/res/layout/fragment_patio.xml
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/luz_amb_ext_chk"
         android:text="@string/sensor_amb"
-        android:layout_below="@id/int_pisc_bar"
+        android:layout_below="@+id/int_pisc_bar"
         android:layout_centerHorizontal="true"
         />
 
@@ -80,11 +80,12 @@
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/sens_pisc_tag"
-        android:text="@string/sensor_tag"
+        android:id="@+id/int_pisc_tag"
+        android:text="@string/intens_tag"
         android:layout_toStartOf="@id/luz_ext_sw"
         android:layout_below="@id/luz_pisc_sw"
         android:textColor="#000"
