--- a/app/src/main/res/layout/fragment_hab2.xml
+++ b/app/src/main/res/layout/fragment_hab2.xml
@@ -132,6 +132,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/temp_hab2"
             tools:text="50°C"/>
 
     </LinearLayout>
