--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -7,7 +7,7 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/left_drawer"
+        android:id="@+id/perfil_list"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
         android:divider="@android:color/darker_gray"
